-- Initial PostgreSQL schema for migrating from legacy MySQL backend.
-- This migration intentionally mirrors existing table names to minimize app changes.

create extension if not exists pgcrypto;

create table if not exists public.staff (
	id bigint generated by default as identity primary key,
	first_name varchar(100),
	middle_name varchar(100),
	last_name varchar(100),
	birthday date,
	gender varchar(20),
	username varchar(100) not null unique,
	password_hash varchar(255),
	employee_id varchar(100) not null unique,
	email varchar(100) unique,
	role varchar(100) not null,
	consent_given boolean not null default false,
	status varchar(50) default 'Active',
	password_reset_token_hash varchar(64),
	password_reset_token_expires timestamptz,
	password_reset_otp_hash varchar(64),
	password_reset_otp_expires timestamptz,
	password_reset_otp_attempts_left integer not null default 5,
	created_at timestamptz not null default now(),
	auth_user_id uuid unique
);

create table if not exists public.pending_staff (
	id bigint generated by default as identity primary key,
	first_name varchar(100) not null,
	middle_name varchar(100) not null,
	last_name varchar(100) not null,
	birthday date not null,
	gender varchar(20) not null,
	username varchar(100) not null unique,
	password_hash varchar(255),
	employee_id varchar(100) not null unique,
	email varchar(100) not null unique,
	role varchar(100) not null,
	consent_given boolean not null default false,
	status varchar(50) default 'Pending',
	created_at timestamptz not null default now(),
	auth_user_id uuid unique
);

create table if not exists public.staff_email_verifications (
	id bigint generated by default as identity primary key,
	first_name varchar(100) not null,
	middle_name varchar(100) not null,
	last_name varchar(100) not null,
	birthday date not null,
	gender varchar(20) not null,
	username varchar(100) unique,
	password_hash varchar(255),
	employee_id varchar(100) not null unique,
	email varchar(100) not null unique,
	role varchar(100) not null,
	consent_given boolean not null default false,
	verification_token_hash varchar(64) not null,
	verification_token_expires timestamptz not null,
	attempts_left integer not null default 5,
	consumed boolean not null default false,
	created_at timestamptz not null default now()
);

create table if not exists public.citizens (
	id bigint generated by default as identity primary key,
	firstname varchar(100) not null,
	surname varchar(100) not null,
	middle_initial varchar(100),
	date_of_birth date,
	age integer,
	contact_number varchar(30),
	sex varchar(10),
	email varchar(100) not null unique,
	complete_address varchar(255),
	emergency_contact_complete_name varchar(200),
	emergency_contact_contact_number varchar(30),
	relation varchar(100),
	username varchar(100) unique,
	password_hash varchar(255),
	role varchar(50) not null default 'citizen',
	password_reset_token_hash varchar(64),
	password_reset_token_expires timestamptz,
	created_at timestamptz not null default now(),
	auth_user_id uuid unique
);

create table if not exists public.citizen_otps (
	id bigint generated by default as identity primary key,
	email varchar(100) not null,
	purpose varchar(30) not null check (purpose in ('registration', 'password_reset')),
	otp_hash varchar(64) not null,
	expires_at timestamptz not null,
	attempts_left integer not null default 5,
	consumed boolean not null default false,
	created_at timestamptz not null default now()
);

create index if not exists idx_citizen_otps_email_purpose
	on public.citizen_otps (email, purpose);

create index if not exists idx_citizen_otps_expires
	on public.citizen_otps (expires_at);

alter table public.staff enable row level security;
alter table public.pending_staff enable row level security;
alter table public.staff_email_verifications enable row level security;
alter table public.citizens enable row level security;
alter table public.citizen_otps enable row level security;

-- Temporary policies for migration/validation. Tighten these before production use.
drop policy if exists temp_allow_all_staff on public.staff;
create policy temp_allow_all_staff on public.staff for all using (true) with check (true);

drop policy if exists temp_allow_all_pending_staff on public.pending_staff;
create policy temp_allow_all_pending_staff on public.pending_staff for all using (true) with check (true);

drop policy if exists temp_allow_all_staff_email_verifications on public.staff_email_verifications;
create policy temp_allow_all_staff_email_verifications on public.staff_email_verifications for all using (true) with check (true);

drop policy if exists temp_allow_all_citizens on public.citizens;
create policy temp_allow_all_citizens on public.citizens for all using (true) with check (true);

drop policy if exists temp_allow_all_citizen_otps on public.citizen_otps;
create policy temp_allow_all_citizen_otps on public.citizen_otps for all using (true) with check (true);
