-- Doctor schedules table for admin-managed working schedules.

create table if not exists public.doctor_schedules (
  id bigint generated by default as identity primary key,
  doctor_staff_id bigint not null references public.staff(id) on delete cascade,
  doctor_name varchar(200),
  schedule_date date not null,
  start_time time not null,
  end_time time not null,
  room varchar(120),
  notes text,
  created_by_staff_id bigint references public.staff(id) on delete set null,
  created_at timestamptz not null default now(),
  updated_at timestamptz not null default now(),
  constraint doctor_schedules_time_range_chk check (end_time > start_time)
);

create index if not exists idx_doctor_schedules_date
  on public.doctor_schedules (schedule_date);

create index if not exists idx_doctor_schedules_doctor_date
  on public.doctor_schedules (doctor_staff_id, schedule_date, start_time);

create unique index if not exists uq_doctor_schedules_slot
  on public.doctor_schedules (doctor_staff_id, schedule_date, start_time, end_time);

create or replace function public.set_doctor_schedule_updated_at()
returns trigger
language plpgsql
as $$
begin
  new.updated_at := now();
  return new;
end;
$$;

drop trigger if exists trg_doctor_schedules_set_updated_at on public.doctor_schedules;
create trigger trg_doctor_schedules_set_updated_at
before update on public.doctor_schedules
for each row execute function public.set_doctor_schedule_updated_at();

alter table public.doctor_schedules enable row level security;

-- Active staff can read schedules.
drop policy if exists doctor_schedules_select_staff on public.doctor_schedules;
create policy doctor_schedules_select_staff
  on public.doctor_schedules
  for select
  using (
    exists (
      select 1
      from public.staff s
      where s.auth_user_id = auth.uid()
        and lower(s.status) = 'active'
    )
  );

-- Admin-only write operations.
drop policy if exists doctor_schedules_insert_admin on public.doctor_schedules;
create policy doctor_schedules_insert_admin
  on public.doctor_schedules
  for insert
  with check (public.is_admin());

drop policy if exists doctor_schedules_update_admin on public.doctor_schedules;
create policy doctor_schedules_update_admin
  on public.doctor_schedules
  for update
  using (public.is_admin())
  with check (public.is_admin());

drop policy if exists doctor_schedules_delete_admin on public.doctor_schedules;
create policy doctor_schedules_delete_admin
  on public.doctor_schedules
  for delete
  using (public.is_admin());
