begin;

create table if not exists public.announcements (
  id bigint generated by default as identity primary key,
  title text not null,
  content text not null,
  created_by_staff_id bigint references public.staff(id) on delete set null,
  created_at timestamptz not null default now(),
  updated_at timestamptz not null default now(),
  constraint announcements_title_non_empty check (length(trim(title)) > 0),
  constraint announcements_content_non_empty check (length(trim(content)) > 0)
);

create index if not exists idx_announcements_created_at on public.announcements(created_at desc);

create or replace function public.set_announcements_updated_at()
returns trigger
language plpgsql
as $$
begin
  new.updated_at := now();
  return new;
end;
$$;

drop trigger if exists trg_announcements_set_updated_at on public.announcements;
create trigger trg_announcements_set_updated_at
before update on public.announcements
for each row execute function public.set_announcements_updated_at();

alter table public.announcements enable row level security;

drop policy if exists announcements_select_active_staff on public.announcements;
create policy announcements_select_active_staff
  on public.announcements
  for select
  using (
    exists (
      select 1
      from public.staff s
      where s.auth_user_id = auth.uid()
        and lower(coalesce(s.status, '')) = 'active'
    )
  );

drop policy if exists announcements_insert_admin on public.announcements;
create policy announcements_insert_admin
  on public.announcements
  for insert
  with check (public.is_admin());

drop policy if exists announcements_update_admin on public.announcements;
create policy announcements_update_admin
  on public.announcements
  for update
  using (public.is_admin())
  with check (public.is_admin());

drop policy if exists announcements_delete_admin on public.announcements;
create policy announcements_delete_admin
  on public.announcements
  for delete
  using (public.is_admin());

commit;
