-- Create feedbacks table for real database-backed feedback records.

create table if not exists public.feedbacks (
  id bigint generated by default as identity primary key,
  citizen_id bigint references public.citizens(id) on delete set null,
  from_email text not null,
  subject text not null,
  message text not null,
  rating smallint,
  created_at timestamptz not null default now(),
  updated_at timestamptz not null default now(),
  constraint feedbacks_subject_non_empty check (length(trim(subject)) > 0),
  constraint feedbacks_message_non_empty check (length(trim(message)) > 0),
  constraint feedbacks_rating_range check (rating is null or (rating >= 1 and rating <= 5))
);

create index if not exists idx_feedbacks_created_at on public.feedbacks(created_at desc);

create or replace function public.set_feedbacks_updated_at()
returns trigger
language plpgsql
as $$
begin
  new.updated_at := now();
  return new;
end;
$$;

drop trigger if exists trg_feedbacks_set_updated_at on public.feedbacks;
create trigger trg_feedbacks_set_updated_at
before update on public.feedbacks
for each row execute function public.set_feedbacks_updated_at();

alter table public.feedbacks enable row level security;

drop policy if exists feedbacks_select_active_staff on public.feedbacks;
create policy feedbacks_select_active_staff
  on public.feedbacks
  for select
  using (
    exists (
      select 1
      from public.staff s
      where s.auth_user_id = auth.uid()
        and lower(trim(coalesce(s.status, ''))) = 'active'
    )
  );

drop policy if exists feedbacks_insert_citizen on public.feedbacks;
create policy feedbacks_insert_citizen
  on public.feedbacks
  for insert
  with check (
    exists (
      select 1
      from public.citizens c
      where c.auth_user_id = auth.uid()
        and (feedbacks.citizen_id is null or c.id = feedbacks.citizen_id)
    )
  );

drop policy if exists feedbacks_manage_admin on public.feedbacks;
create policy feedbacks_manage_admin
  on public.feedbacks
  for all
  using (public.is_admin())
  with check (public.is_admin());

grant select, insert on public.feedbacks to authenticated;
