-- Create medicines table for database-backed inventory management.

create table if not exists public.medicines (
  id bigint generated by default as identity primary key,
  name text not null,
  qty integer not null default 0,
  unit text,
  created_by_staff_id bigint references public.staff(id) on delete set null,
  created_at timestamptz not null default now(),
  updated_at timestamptz not null default now(),
  constraint medicines_name_non_empty check (length(trim(name)) > 0),
  constraint medicines_qty_non_negative check (qty >= 0)
);

create unique index if not exists idx_medicines_name_lower on public.medicines (lower(trim(name)));
create index if not exists idx_medicines_created_at on public.medicines (created_at desc);

create or replace function public.set_medicines_updated_at()
returns trigger
language plpgsql
as $$
begin
  new.updated_at := now();
  return new;
end;
$$;

drop trigger if exists trg_medicines_set_updated_at on public.medicines;
create trigger trg_medicines_set_updated_at
before update on public.medicines
for each row execute function public.set_medicines_updated_at();

alter table public.medicines enable row level security;

drop policy if exists medicines_select_active_staff on public.medicines;
create policy medicines_select_active_staff
  on public.medicines
  for select
  using (
    exists (
      select 1
      from public.staff s
      where s.auth_user_id = auth.uid()
        and lower(trim(coalesce(s.status, ''))) = 'active'
    )
  );

drop policy if exists medicines_insert_admin_or_doctor on public.medicines;
create policy medicines_insert_admin_or_doctor
  on public.medicines
  for insert
  with check (
    public.is_admin()
    or exists (
      select 1
      from public.staff s
      where s.auth_user_id = auth.uid()
        and lower(trim(coalesce(s.status, ''))) = 'active'
        and lower(trim(coalesce(s.role, ''))) = any (array['doctor', 'specialist'])
    )
  );

drop policy if exists medicines_update_admin_doctor_nurse on public.medicines;
create policy medicines_update_admin_doctor_nurse
  on public.medicines
  for update
  using (
    public.is_admin()
    or exists (
      select 1
      from public.staff s
      where s.auth_user_id = auth.uid()
        and lower(trim(coalesce(s.status, ''))) = 'active'
        and lower(trim(coalesce(s.role, ''))) = any (array['doctor', 'specialist', 'nurse'])
    )
  )
  with check (
    qty >= 0
    and (
      public.is_admin()
      or exists (
        select 1
        from public.staff s
        where s.auth_user_id = auth.uid()
          and lower(trim(coalesce(s.status, ''))) = 'active'
          and lower(trim(coalesce(s.role, ''))) = any (array['doctor', 'specialist', 'nurse'])
      )
    )
  );

grant select, insert, update on public.medicines to authenticated;
