-- Queue feature for citizens with real-time dashboard summary.

create table if not exists public.queue_tickets (
  id bigint generated by default as identity primary key,
  queue_date date not null default current_date,
  service_key text not null,
  service_label text not null,
  queue_number integer not null,
  ticket_code text not null unique,
  citizen_id bigint not null references public.citizens(id) on delete cascade,
  citizen_type text not null,
  reason text,
  symptoms text,
  status text not null default 'waiting',
  created_at timestamptz not null default now(),
  updated_at timestamptz not null default now(),
  served_at timestamptz,
  completed_at timestamptz,
  constraint queue_tickets_service_key_non_empty check (length(trim(service_key)) > 0),
  constraint queue_tickets_service_label_non_empty check (length(trim(service_label)) > 0),
  constraint queue_tickets_queue_number_positive check (queue_number > 0),
  constraint queue_tickets_citizen_type_valid check (lower(trim(citizen_type)) = any (array['regular','pwd','pregnant'])),
  constraint queue_tickets_status_valid check (lower(trim(status)) = any (array['waiting','serving','completed','cancelled']))
);

create unique index if not exists idx_queue_tickets_unique_slot
  on public.queue_tickets(queue_date, service_key, queue_number);

create index if not exists idx_queue_tickets_citizen_date
  on public.queue_tickets(citizen_id, queue_date desc, created_at desc);

create index if not exists idx_queue_tickets_service_status
  on public.queue_tickets(queue_date, service_key, status, queue_number);

create or replace function public.set_queue_tickets_updated_at()
returns trigger
language plpgsql
as $$
begin
  new.updated_at := now();
  return new;
end;
$$;

drop trigger if exists trg_queue_tickets_set_updated_at on public.queue_tickets;
create trigger trg_queue_tickets_set_updated_at
before update on public.queue_tickets
for each row execute function public.set_queue_tickets_updated_at();

alter table public.queue_tickets enable row level security;

drop policy if exists queue_tickets_select_policy on public.queue_tickets;
create policy queue_tickets_select_policy
  on public.queue_tickets
  for select
  using (
    exists (
      select 1
      from public.citizens c
      where c.id = queue_tickets.citizen_id
        and c.auth_user_id = auth.uid()
    )
    or public.is_admin()
    or exists (
      select 1
      from public.staff s
      where s.auth_user_id = auth.uid()
        and lower(trim(coalesce(s.status, ''))) = 'active'
    )
  );

drop policy if exists queue_tickets_insert_citizen on public.queue_tickets;
create policy queue_tickets_insert_citizen
  on public.queue_tickets
  for insert
  with check (
    exists (
      select 1
      from public.citizens c
      where c.id = queue_tickets.citizen_id
        and c.auth_user_id = auth.uid()
    )
  );

drop policy if exists queue_tickets_update_policy on public.queue_tickets;
create policy queue_tickets_update_policy
  on public.queue_tickets
  for update
  using (
    public.is_admin()
    or exists (
      select 1
      from public.staff s
      where s.auth_user_id = auth.uid()
        and lower(trim(coalesce(s.status, ''))) = 'active'
    )
    or exists (
      select 1
      from public.citizens c
      where c.id = queue_tickets.citizen_id
        and c.auth_user_id = auth.uid()
    )
  )
  with check (
    public.is_admin()
    or exists (
      select 1
      from public.staff s
      where s.auth_user_id = auth.uid()
        and lower(trim(coalesce(s.status, ''))) = 'active'
    )
    or (
      exists (
        select 1
        from public.citizens c
        where c.id = queue_tickets.citizen_id
          and c.auth_user_id = auth.uid()
      )
      and lower(trim(coalesce(queue_tickets.status, ''))) in ('waiting', 'cancelled')
    )
  );

grant select, insert, update on public.queue_tickets to authenticated;

create or replace function public.list_available_queue_services(
  p_date date default current_date
)
returns table (
  service_key text,
  service_label text,
  doctor_count integer
)
language sql
security definer
set search_path = public
as $$
  with source as (
    select
      lower(trim(coalesce(s.doctor_specialization, ''))) as specialization
    from public.doctor_schedules ds
    join public.staff s on s.id = ds.doctor_staff_id
    where ds.schedule_date = coalesce(p_date, current_date)
      and lower(trim(coalesce(s.status, ''))) = 'active'
      and lower(trim(coalesce(s.role, ''))) = 'doctor'
  )
  select
    case
      when specialization like '%dental%' then 'dental'
      when specialization like '%prenatal%' or specialization like '%maternal%' or specialization like '%ob%' then 'prenatal'
      else 'general_consultation'
    end as service_key,
    case
      when specialization like '%dental%' then 'Dental'
      when specialization like '%prenatal%' or specialization like '%maternal%' or specialization like '%ob%' then 'Prenatal'
      else 'General Consultation'
    end as service_label,
    count(*)::integer as doctor_count
  from source
  group by 1, 2
  order by 2;
$$;

grant execute on function public.list_available_queue_services(date) to authenticated;

create or replace function public.create_queue_ticket(
  p_service_key text,
  p_service_label text,
  p_citizen_type text,
  p_reason text default null,
  p_symptoms text default null
)
returns table (
  id bigint,
  queue_number integer,
  ticket_code text,
  service_key text,
  service_label text,
  citizen_type text,
  status text,
  estimated_wait_minutes integer
)
language plpgsql
security definer
set search_path = public
as $$
declare
  v_citizen_id bigint;
  v_service_key text;
  v_service_label text;
  v_citizen_type text;
  v_next_number integer;
  v_ticket_code text;
  v_waiting_ahead integer;
begin
  select c.id
  into v_citizen_id
  from public.citizens c
  where c.auth_user_id = auth.uid()
  limit 1;

  if v_citizen_id is null then
    raise exception 'Citizen profile not found for current session.';
  end if;

  v_service_key := lower(trim(coalesce(p_service_key, '')));
  v_service_label := trim(coalesce(p_service_label, ''));
  v_citizen_type := lower(trim(coalesce(p_citizen_type, 'regular')));

  if v_service_key = '' then
    raise exception 'Service key is required.';
  end if;

  if v_service_label = '' then
    raise exception 'Service label is required.';
  end if;

  if v_citizen_type not in ('regular', 'pwd', 'pregnant') then
    raise exception 'Invalid citizen type.';
  end if;

  select coalesce(max(q.queue_number), 0) + 1
  into v_next_number
  from public.queue_tickets q
  where q.queue_date = current_date
    and q.service_key = v_service_key;

  v_ticket_code := format(
    'Q-%s-%s-%s',
    to_char(current_date, 'YYYYMMDD'),
    upper(substr(regexp_replace(v_service_key, '[^a-z0-9]+', '', 'g'), 1, 4)),
    lpad(v_next_number::text, 3, '0')
  );

  insert into public.queue_tickets (
    queue_date,
    service_key,
    service_label,
    queue_number,
    ticket_code,
    citizen_id,
    citizen_type,
    reason,
    symptoms,
    status
  )
  values (
    current_date,
    v_service_key,
    v_service_label,
    v_next_number,
    v_ticket_code,
    v_citizen_id,
    v_citizen_type,
    nullif(trim(coalesce(p_reason, '')), ''),
    nullif(trim(coalesce(p_symptoms, '')), ''),
    'waiting'
  )
  returning
    queue_tickets.id,
    queue_tickets.queue_number,
    queue_tickets.ticket_code,
    queue_tickets.service_key,
    queue_tickets.service_label,
    queue_tickets.citizen_type,
    queue_tickets.status
  into id, queue_number, ticket_code, service_key, service_label, citizen_type, status;

  select count(*)::integer
  into v_waiting_ahead
  from public.queue_tickets q
  where q.queue_date = current_date
    and q.service_key = v_service_key
    and lower(trim(coalesce(q.status, ''))) in ('waiting', 'serving')
    and q.queue_number < v_next_number;

  estimated_wait_minutes := greatest(0, v_waiting_ahead) * 10;

  return next;
end;
$$;

grant execute on function public.create_queue_ticket(text, text, text, text, text) to authenticated;

create or replace function public.get_my_queue_dashboard()
returns table (
  queue_id bigint,
  service_key text,
  service_label text,
  ticket_code text,
  my_queue_number integer,
  currently_serving_queue_number integer,
  estimated_wait_minutes integer,
  status text,
  queue_date date
)
language plpgsql
security definer
set search_path = public
as $$
declare
  v_citizen_id bigint;
  v_queue_id bigint;
  v_service_key text;
  v_service_label text;
  v_ticket_code text;
  v_my_queue integer;
  v_status text;
  v_serving_queue integer;
  v_waiting_ahead integer;
  v_queue_date date;
begin
  select c.id
  into v_citizen_id
  from public.citizens c
  where c.auth_user_id = auth.uid()
  limit 1;

  if v_citizen_id is null then
    return;
  end if;

  select
    q.id,
    q.service_key,
    q.service_label,
    q.ticket_code,
    q.queue_number,
    q.status,
    q.queue_date
  into
    v_queue_id,
    v_service_key,
    v_service_label,
    v_ticket_code,
    v_my_queue,
    v_status,
    v_queue_date
  from public.queue_tickets q
  where q.citizen_id = v_citizen_id
    and q.queue_date = current_date
    and lower(trim(coalesce(q.status, ''))) in ('waiting', 'serving')
  order by q.created_at desc
  limit 1;

  if v_queue_id is null then
    return;
  end if;

  select min(q.queue_number)
  into v_serving_queue
  from public.queue_tickets q
  where q.queue_date = v_queue_date
    and q.service_key = v_service_key
    and lower(trim(coalesce(q.status, ''))) = 'serving';

  select count(*)::integer
  into v_waiting_ahead
  from public.queue_tickets q
  where q.queue_date = v_queue_date
    and q.service_key = v_service_key
    and lower(trim(coalesce(q.status, ''))) = 'waiting'
    and q.queue_number < v_my_queue;

  queue_id := v_queue_id;
  service_key := v_service_key;
  service_label := v_service_label;
  ticket_code := v_ticket_code;
  my_queue_number := v_my_queue;
  currently_serving_queue_number := v_serving_queue;
  estimated_wait_minutes := (coalesce(v_waiting_ahead, 0) + case when v_serving_queue is not null and v_serving_queue < v_my_queue then 1 else 0 end) * 10;
  status := v_status;
  queue_date := v_queue_date;

  return next;
end;
$$;

grant execute on function public.get_my_queue_dashboard() to authenticated;
