-- Pre-auth OTP flow for citizen signup.
-- Enforces OTP verification before creating a Supabase Auth user.

create table if not exists public.pending_citizen_signups (
  id bigint generated by default as identity primary key,
  email text not null unique,
  profile jsonb not null,
  otp_hash text not null,
  otp_expires_at timestamptz not null,
  attempts_left integer not null default 5,
  verified_at timestamptz,
  consumed_at timestamptz,
  created_at timestamptz not null default now(),
  updated_at timestamptz not null default now()
);

create index if not exists idx_pending_citizen_signups_expires
  on public.pending_citizen_signups (otp_expires_at);

create or replace function public.set_pending_citizen_signups_updated_at()
returns trigger
language plpgsql
as $$
begin
  new.updated_at := now();
  return new;
end;
$$;

drop trigger if exists trg_pending_citizen_signups_updated_at on public.pending_citizen_signups;
create trigger trg_pending_citizen_signups_updated_at
before update on public.pending_citizen_signups
for each row execute function public.set_pending_citizen_signups_updated_at();

alter table public.pending_citizen_signups enable row level security;

-- No anon/authenticated policies on purpose.
-- Access is only through service role in edge functions.
drop policy if exists pending_citizen_signups_block_all on public.pending_citizen_signups;
create policy pending_citizen_signups_block_all
  on public.pending_citizen_signups
  for all
  to authenticated
  using (false)
  with check (false);
